--- a/testDBConnection/src/main/resources/application.properties
+++ b/testDBConnection/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mobileclass?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=dataUser
-spring.datasource.password=SCUsmq61347!
+spring.datasource.password=scusmq61347
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
