--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #jsp location default in src/main/webapp
 spring.mvc.view.prefix:/
-spring.mvc.view.suffix:.html
+spring.mvc.view.suffix:.jsp
